--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
     <modules>
         <module>config-server</module>
         <module>stargazer-test-service</module>
+        <module>discovery-server</module>
     </modules>
 
     <dependencyManagement>
