--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>config-server</module>
         <module>stargazer-test-service</module>
         <module>discovery-server</module>
+        <module>gateway-service</module>
     </modules>
 
     <dependencyManagement>
@@ -50,6 +51,11 @@
                     <configuration>
                         <release>21</release>
                     </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>3.2.5</version>
                 </plugin>
             </plugins>
         </pluginManagement>
