--- a/discovery-server/src/main/resources/application.properties
+++ b/discovery-server/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.application.name=discovery-server
 eureka.client.registerWithEureka=false
 eureka.client.fetchRegistry=false
 eureka.server.enable-self-preservation=false
+spring.config.import=optional:configserver:http://localhost:8888
