--- a/gateway-service/src/main/resources/application.properties
+++ b/gateway-service/src/main/resources/application.properties
@@ -1,6 +1,4 @@
-server.port=8081
-spring.application.name=stargazer-test-service
+spring.application.name=gateway-service
 spring.config.import=optional:configserver:http://localhost:8888
-management.endpoints.web.exposure.include=*
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
-
+spring.cloud.gateway.discovery.locator.enabled=false
