--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>stargazer-test-service</module>
         <module>discovery-server</module>
         <module>gateway-service</module>
+        <module>user-service</module>
     </modules>
 
     <dependencyManagement>
