Create spot logic in domain and application layers

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>discovery-server</module>
         <module>gateway-service</module>
         <module>user-service</module>
+        <module>spot-service</module>
     </modules>
 
     <dependencyManagement>
