--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     </properties>
 
     <modules>
+        <module>shared-kernel-spot</module>
         <module>config-server</module>
         <module>stargazer-test-service</module>
         <module>discovery-server</module>
