--- a/spot-service/pom.xml
+++ b/spot-service/pom.xml
@@ -33,6 +33,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security-oauth2-resource-server</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.ppublica.stargazer</groupId>
+            <artifactId>shared-kernel-spot</artifactId>
+            <version>1.0.0</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
 
