Create application domain objects for Spot and SpotMetadata in SpotPersonalization; build spot view response

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
     <modules>
         <module>shared-kernel-spot</module>
         <module>shared-kernel-user</module>
+        <module>shared-kernel-spotmetadata</module>
         <module>config-server</module>
         <module>stargazer-test-service</module>
         <module>discovery-server</module>
