--- a/spot-personalization-service/pom.xml
+++ b/spot-personalization-service/pom.xml
@@ -45,6 +45,12 @@
             <version>1.0.0</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com.ppublica.stargazer</groupId>
+            <artifactId>shared-kernel-spotmetadata</artifactId>
+            <version>1.0.0</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
