--- a/spot-metadata-service/pom.xml
+++ b/spot-metadata-service/pom.xml
@@ -30,6 +30,10 @@
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-webflux</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.ppublica.stargazer</groupId>
             <artifactId>shared-kernel-spot</artifactId>
             <version>1.0.0</version>
