--- a/spot-service/src/main/resources/application.properties
+++ b/spot-service/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.application.name=spot-service
 spring.config.import=optional:configserver:http://localhost:8888
 management.endpoints.web.exposure.include=*
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+spot-service.enrichment.elevation.api.base-url=https://api.open-meteo.com/v1/elevation
