--- a/spot-personalization-service/src/main/resources/application.properties
+++ b/spot-personalization-service/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.application.name=spot-personalization-service
 spring.config.import=optional:configserver:http://localhost:8888
 management.endpoints.web.exposure.include=*
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+spot-service.base-url=http://spot-service
